--- a/Server/apps/mpconsole/templates/client_groups.html
+++ b/Server/apps/mpconsole/templates/client_groups.html
@@ -106,8 +106,10 @@ Client Groups
 		var hasRowRight = false;
 
 		hasRowRight = false;
-		for (i = 0; i < gRights.length; i++) {
-			if (gRights[i] == row.group_id || row.group_name == 'Default') {
+		for (i = 0; i < gRights.length; i++)
+		{
+			if (gRights[i] == row.group_id || row.group_name == 'Default')
+			{
 				hasRowRight = true;
 			}
 		}
