--- a/Server/apps/mpconsole/templates/dashboard/dashboard.html
+++ b/Server/apps/mpconsole/templates/dashboard/dashboard.html
@@ -2,6 +2,7 @@
 
 {% block styles %}
 	{{ super() }}
+    	<link href="{{ url_for('static', filename='bower_components/bootstrap-table/dist/bootstrap-table.css') }}" rel="stylesheet">
 	<link href="{{ url_for('static', filename='bower_components/morris.js/morris.css') }}" rel="stylesheet">
 {%  endblock %}
 
@@ -27,18 +28,50 @@
 				</div>
 				<!-- /.col-lg-6 -->
 				<div class="col-lg-6">
-					<div class="panel panel-default">
+                    <div class="panel panel-default">
 						<div class="panel-heading">
-							Top 10 Required Patches
+							Patches
 						</div>
-						<!-- /.panel-heading -->
-						<div class="panel-body">
-							<canvas id="patch-bar-chart" />
-						</div>
-						<!-- /.panel-body -->
-					</div>
-					<!-- /.panel -->
+                        <div class="panel-body">
+                            <ul class="nav nav-tabs">
+                               <li><a href="#pRequired" data-toggle="tab">Required</a></li>
+                               <li><a href="#pReleased" data-toggle="tab">Released</a></li>
+                               <li><a href="#pInstalled" data-toggle="tab">Installed</a></li>
+                            </ul>
+                            <div class="tab-content">
+								<div class="tab-pane active" id="pRequired">
+									<br>
+									<canvas id="patch-bar-chart" />
+								</div>
+								<div class="tab-pane" id="pReleased">
+									<br>
+									<table id="table" class="table table-condensed" data-toggle="table">
+										<thead>
+											<tr>
+												<th>Patch</th>
+												<th>Version</th>
+												<th>Release Date</th>
+											</tr>
+										</thead>
+										<tbody>
+											{% for item in patchReleased %}
+											<tr>
+												<td>{{item['patch']}}</td><td>{{item['version']}}</td><td>{{item['date']}}</td>
+											</tr>
+											{% endfor %}
+										</tbody>
+									</table>
+								</div>
+								<div class="tab-pane" id="pInstalled">
+									<br>
+									<canvas id="patch-installed-bar-chart" />
+								</div>
+                            </div>
+                        </div>
+                    </div>
 				</div>
+            </div>
+            <div class="row">
 				<!-- /.col-lg-6 -->
 				<div class="col-lg-6">
 					<div class="panel panel-default">
@@ -46,7 +79,7 @@
 							OS Version Breakdown
 						</div>
 						<!-- /.panel-heading -->
-						<div class="panel-body">
+                        <div class="panel-body">
 							<canvas id="osver-bar-chart" />
 						</div>
 						<!-- /.panel-body -->
@@ -67,6 +100,8 @@
 					</div>
 					<!-- /.panel -->
 				</div>
+            </div>
+            <div class="row">
 				<!-- /.col-lg-6 -->
 				<div class="col-lg-6">
 					<div class="panel panel-default">
@@ -117,9 +152,13 @@
 
 
 	<script>
+	$( document ).ready(function()
+	{
+	    //$('#pRequired a[href="#pRequired"]').tab('show');
+	});
 
-	var ctx = document.getElementById("reboot-pie-chart");
-	var myChart = new Chart(ctx, {
+	var ctxRebootStatus = document.getElementById("reboot-pie-chart");
+	var myChartRebootStatus = new Chart(ctxRebootStatus, {
 		type: 'pie',
 		data: {
 			labels: [
@@ -147,8 +186,8 @@
 		}
 	});
 
-	var ctx = document.getElementById("model-bar-chart");
-	var myChart = new Chart(ctx, {
+	var ctxModelType = document.getElementById("model-bar-chart");
+	var modelTypeChart = new Chart(ctxModelType, {
 		type: 'bar',
 		data: {
 			labels: [
@@ -187,8 +226,8 @@
 		}
 	});
 
-	var ctx = document.getElementById("patch-bar-chart");
-	var myChart = new Chart(ctx, {
+	var ctxRequiredPatches = document.getElementById("patch-bar-chart");
+	var requiredPatchesChart = new Chart(ctxRequiredPatches, {
 		type: 'bar',
 		data: {
 			labels: [
@@ -213,9 +252,12 @@
 		},
 		options: {
 			responsive: true,
-			title: {
+			legend: {
 				display: false,
-				text: 'Custom Chart Title'
+			},
+			title: {
+				display: true,
+				text: 'Top 10 Required Patches'
 			},
 			scales: {
 				yAxes: [{
@@ -267,6 +309,49 @@
 		}
 	});
 
+	var ctxPatchInstall = document.getElementById("patch-installed-bar-chart");
+	var patchInstallChart = new Chart(ctxPatchInstall, {
+		type: 'bar',
+		data: {
+			labels: [
+				{% for item in patchInstalled %}
+					"{{item[0]}}",
+				{% endfor %}
+			],
+			datasets: [{
+				
+				data: [
+					{% for item in patchInstalled %}
+						"{{item[1]}}",
+					{% endfor %}
+				],
+				backgroundColor: [
+					{% for item in patchInstalled %}
+					chartColor(),
+					{% endfor %}
+				],
+				borderWidth: 1
+			}]
+		},
+		options: {
+			responsive: true,
+			legend: {
+				display: false,
+			},
+			title: {
+				display: true,
+				text: 'Top 10 Installed Patches'
+			},
+			scales: {
+				yAxes: [{
+					ticks: {
+						beginAtZero: true
+					}
+				}]
+			}
+		}
+	});
+
 	ctxOSVer.onclick = function (evt)
 	{
 		var activePoints = myChartOsVer.getElementsAtEvent(evt);
@@ -276,7 +361,77 @@
 		var label = chartData.labels[idx];
 		var value = chartData.datasets[0].data[idx];
 
-		var url = "http://example.com/?label=" + label + "&value=" + value;
+        $.get( "/dashboard/drilldown/osver/"+label).done(function(data) {
+            $('#modalTitle').html("OS Version - " + label);
+            $('#modalBody').html(data);
+            $('#modalSaveButton').hide();
+            $('#modalCancelButton').hide();
+            $('#modalDialog').addClass("modal-wide");
+            $('#modalBody').css({'height':'80vh'});
+            $('#modalDialog').modal('show');
+        });
+
+		//var url = "http://example.com/?label=" + label + "&value=" + value;
+	};
+
+	ctxRebootStatus.onclick = function (evt)
+	{
+		var activePoints = myChartRebootStatus.getElementsAtEvent(evt);
+		var chartData = activePoints[0]['_chart'].config.data;
+		var idx = activePoints[0]['_index'];
+
+		var label = chartData.labels[idx];
+		var value = chartData.datasets[0].data[idx];
+
+        $.get( "/dashboard/drilldown/reboot/"+label).done(function(data) {
+            $('#modalTitle').html("Reboot Status - " + label);
+            $('#modalBody').html(data);
+            $('#modalSaveButton').hide();
+            $('#modalCancelButton').hide();
+            $('#modalDialog').addClass("modal-wide");
+            $('#modalBody').css({'height':'80vh'});
+            $('#modalDialog').modal('show');
+        });
+	};
+
+	ctxModelType.onclick = function (evt)
+	{
+		var activePoints = modelTypeChart.getElementsAtEvent(evt);
+		var chartData = activePoints[0]['_chart'].config.data;
+		var idx = activePoints[0]['_index'];
+
+		var label = chartData.labels[idx];
+		var value = chartData.datasets[0].data[idx];
+
+        $.get( "/dashboard/drilldown/modelType/"+label).done(function(data) {
+            $('#modalTitle').html("Model Type - " + label);
+            $('#modalBody').html(data);
+            $('#modalSaveButton').hide();
+            $('#modalCancelButton').hide();
+            $('#modalDialog').addClass("modal-wide");
+            $('#modalBody').css({'height':'80vh'});
+            $('#modalDialog').modal('show');
+        });
+	};
+
+	ctxRequiredPatches.onclick = function (evt)
+	{
+		var activePoints = requiredPatchesChart.getElementsAtEvent(evt);
+		var chartData = activePoints[0]['_chart'].config.data;
+		var idx = activePoints[0]['_index'];
+
+		var label = chartData.labels[idx];
+		var value = chartData.datasets[0].data[idx];
+
+        $.get( "/dashboard/drilldown/requiredPatches/"+label).done(function(data) {
+            $('#modalTitle').html("Required Patch - " + label);
+            $('#modalBody').html(data);
+            $('#modalSaveButton').hide();
+            $('#modalCancelButton').hide();
+            $('#modalDialog').addClass("modal-wide");
+            $('#modalBody').css({'height':'80vh'});
+            $('#modalDialog').modal('show');
+        });
 	};
 
 	function graphClickEventOSVer(event)
@@ -290,10 +445,10 @@
 
 		var url = "http://example.com/?label=" + label + "&value=" + value;
 		alert(url);
-	}
+	};
 
-	var ctx = document.getElementById("clientstatus-bar-chart");
-	var myChart = new Chart(ctx, {
+	var ctxClientStatus = document.getElementById("clientstatus-bar-chart");
+	var clientStatusChart = new Chart(ctxClientStatus, {
 		type: 'bar',
 		data: {
 			labels: [ 'Normal', 'Warning', 'Alert' ],
@@ -320,8 +475,28 @@
 		}
 	});
 
-	var ctx = document.getElementById("agents-pie-chart");
-	var myChart = new Chart(ctx, {
+	ctxClientStatus.onclick = function (evt)
+	{
+		var activePoints = clientStatusChart.getElementsAtEvent(evt);
+		var chartData = activePoints[0]['_chart'].config.data;
+		var idx = activePoints[0]['_index'];
+
+		var label = chartData.labels[idx];
+		var value = chartData.datasets[0].data[idx];
+
+        $.get( "/dashboard/drilldown/agentStatus/"+label).done(function(data) {
+            $('#modalTitle').html("Agent Status - " + label);
+            $('#modalBody').html(data);
+            $('#modalSaveButton').hide();
+            $('#modalCancelButton').hide();
+            $('#modalDialog').addClass("modal-wide");
+            $('#modalBody').css({'height':'80vh'});
+            $('#modalDialog').modal('show');
+        });
+	};
+
+	var ctxAgentVersion = document.getElementById("agents-pie-chart");
+	var agentVersionChart = new Chart(ctxAgentVersion, {
 		type: 'pie',
 		data: {
 			labels: [
@@ -349,6 +524,26 @@
 			responsive: true
 		}
 	});
+
+	ctxAgentVersion.onclick = function (evt)
+	{
+		var activePoints = agentVersionChart.getElementsAtEvent(evt);
+		var chartData = activePoints[0]['_chart'].config.data;
+		var idx = activePoints[0]['_index'];
+
+		var label = chartData.labels[idx];
+		var value = chartData.datasets[0].data[idx];
+
+        $.get( "/dashboard/drilldown/agentVersion/"+label).done(function(data) {
+            $('#modalTitle').html("Agent Version - " + label);
+            $('#modalBody').html(data);
+            $('#modalSaveButton').hide();
+            $('#modalCancelButton').hide();
+            $('#modalDialog').addClass("modal-wide");
+            $('#modalBody').css({'height':'80vh'});
+            $('#modalDialog').modal('show');
+        });
+	};
 
 
 	</script>
