--- a/Server/apps/mpconsole/templates/update_client_group.html
+++ b/Server/apps/mpconsole/templates/update_client_group.html
@@ -6,7 +6,7 @@
 
 {% block bodyPanel %}
 <div class="container">
-	<form method='post' action='/clients/group/update' id="myForm">
+	<form method='post' action='/clients/group/update/NA' id="myForm">
 		<table class="table-condensed">
 			<tbody>
 			<tr>
