Fix export issue

--- a/Server/apps/mpconsole/templates/client_dashboard.html
+++ b/Server/apps/mpconsole/templates/client_dashboard.html
@@ -139,6 +139,7 @@
 	<script src="{{ url_for('static', filename='bower_components/bootstrap-table/dist/extensions/resizable/bootstrap-table-resizable.min.js') }}"></script>
 	 <script src="{{ url_for('static', filename='bower_components/col-resizable/colResizable-1.6.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='bower_components/bootstrap-table/dist/extensions/export/bootstrap-table-export.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='bower_components/tableexport.jquery.plugin/tableExport.min.js') }}"></script>
 	{% block javascript %}
 	<script type="text/javascript">
 
