--- a/Server/apps/mpconsole/templates/reports/report.html
+++ b/Server/apps/mpconsole/templates/reports/report.html
@@ -38,6 +38,7 @@ Report - {{title}}
 	<script src="{{ url_for('static', filename='static_components/bootstrap-editable/bootstrap-editable.js') }}"></script>
 	<script src="{{ url_for('static', filename='bower_components/col-resizable/colResizable-1.6.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='bower_components/bootstrap-table/dist/extensions/export/bootstrap-table-export.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='bower_components/tableexport.jquery.plugin/tableExport.min.js') }}"></script>
 	<link href="{{ url_for('static', filename='css/mp.css') }}" rel="stylesheet">
 	<script>
 
@@ -64,7 +65,7 @@ Report - {{title}}
 					url: _url,
 					cache: false,
 					dataType: 'json',
-					success: function(res) 
+					success: function(res)
 					{
 						params.success({
 							me: 'required',
