--- a/Server/apps/mpconsole/templates/dashboard/dashview.html
+++ b/Server/apps/mpconsole/templates/dashboard/dashview.html
@@ -17,7 +17,7 @@
 
 {% block body %}
 	<div>
-		<table id="chartDataTable" data-toolbar="#chartDataToolbar" data-show-export="true" data-show-columns="true">
+		<table id="chartDataTable" data-toolbar="#chartDataToolbar" data-show-export="true" data-show-columns="true" class="table table-condensed">
 			<div id="chartDataToolbar"></div>
 		</table>
 	</div>
