--- a/Server/apps/mpconsole/templates/os_managment/os_profile_manager.html
+++ b/Server/apps/mpconsole/templates/os_managment/os_profile_manager.html
@@ -35,7 +35,7 @@
 {% block bodyPanel %}
 <div class="content">
 	<form id="osProfileForm" action="#">
-		<input name="gPolicyID" type="hidden" value="{{profileData.gPolicyID or '' }}">
+		<input name="gPolicyID" type="hidden" value="{{profileData.gPolicyID or groupPolicyID }}">
 		<input name="groupID" type="hidden" value="{{groupID or '' }}">
 		<div id="wizard">
 			<h1>Profile Information</h1>
@@ -105,7 +105,7 @@
 								<label>Upload New Profile</label>
 							</div>
 							<div class="col-md-6">
-								<input type="file" name="profileFile" message="Error [Patch File]: A patch package name is required.">
+								<input type="file" name="profileFile" id="profileFile"  message="Error [Profile File]: A profile file is required.">
 							</div>
 							<div class="col-md-3">
 								<small></small>
@@ -139,6 +139,87 @@
 					</div>
 				</div>
 			</section>
+
+			<h1>Global Profile</h1>
+			<section>
+				<h4>Global - Profile Criteria</h4>
+				<hr>
+				<div class="container-fluid">
+					<div class="form-group">
+						<div class="row top-buffer">
+							<div class="col-md-2">
+								<label>Global Profile</label>
+							</div>
+							<div class="col-md-6" style="height: 27px;">
+								<select name="isglobal" size="1" required="yes">
+									<option value="1" {% if profileData.isglobal == 1 %}selected{% endif %}>True</option>
+									<option value="0" {% if profileData.isglobal == 0 %}selected{% endif %}>False</option>
+								</select>
+							</div>
+						</div>
+						<hr>
+						<div class="row top-buffer">
+							<div class="col-md-2">
+								<label>OS Type</label>
+							</div>
+							<div class="col-md-4">
+								<select name="cri_os_type" size="1">
+									<option {% if profileCriteriaAlt['OSType'] == "Mac OS X" %}selected{% endif %}>Mac OS X</option>
+									<option {% if profileCriteriaAlt['OSType'] == "Mac OS X Server" %}selected{% endif %}>Mac OS X Server</option>
+									<option {% if profileCriteriaAlt['OSType'] == "Mac OS X, Mac OS X Server" %}selected{% endif %}>Mac OS X, Mac OS X Server</option>
+								</select>
+							</div>
+							<div class="col-md-3">
+								<small>(e.g. "Mac OS X, Mac OS X Server")</small>
+							</div>
+						</div>
+						<div class="row top-buffer">
+							<div class="col-md-2">
+								<label>OS Version</label>
+							</div>
+							<div class="col-md-4">
+								<input type="text" name="cri_os_ver" SIZE="50" required="Yes" message="Error [Required OS Version]: A OS version is required." value="{{profileCriteriaAlt['OSVersion'] or '*'}}">
+							</div>
+							<div class="col-md-3">
+								<small>(e.g. "10.4.*,10.5.*")</small>
+							</div>
+						</div>
+						<div class="row top-buffer">
+							<div class="col-md-2">
+								<label>System Type</label>
+							</div>
+							<div class="col-md-4">
+								<select name="cri_system_type" size="1">
+									<option {% if profileCriteriaAlt['SYSType'] == "Desktop, Laptop" %}selected{% endif %}>Desktop, Laptop</option>
+									<option {% if profileCriteriaAlt['SYSType'] == "Desktop" %}selected{% endif %}>Desktop</option>
+									<option {% if profileCriteriaAlt['SYSType'] == "Laptop" %}selected{% endif %}>Laptop</option>
+								</select>
+							</div>
+							<div class="col-md-3">
+								<small>(e.g. "Desktop, Laptop")</small>
+							</div>
+						</div>
+						<div class="row top-buffer">
+							<div class="col-md-2">
+								<label>Model Type</label>
+							</div>
+							<div class="col-md-4">
+								<input type="text" name="cri_model_type" SIZE="50" required="Yes" message="Error [Required OS Version]: A OS version is required." value="{{profileCriteriaAlt['SYSModel'] or '*'}}">
+							</div>
+							<div class="col-md-3">
+								<small>(e.g. "*, iMac12,2, MacBookPro11,3")</small>
+							</div>
+						</div>
+						<hr>
+						<input type="hidden" id="reqid" value="0">
+						<div class="optionBox">
+							<div class="block">
+								<p><h5><span class="add" id='spanLink'><img src="/static/img/process_add_16.png"/> Add Criteria</span></h5><p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</div>
 	</form>
 </div>
@@ -156,6 +237,9 @@
 	<!-- jQuery Step Wizard -->
 	<script src="{{ url_for('static', filename='static_components/modernizr/modernizr.js') }}"></script>
 	<script src="{{ url_for('static', filename='bower_components/jquery.steps/build/jquery.steps.min.js') }}"></script>
+
+	<!-- ACE Editor -->
+	<script src="{{ url_for('static', filename='static_components/ace/src/ace.js') }}"></script>
 
 	<script src="{{ url_for('static', filename='bower_components/selectize/dist/js/standalone/selectize.min.js') }}"></script>
 
@@ -188,11 +272,30 @@
 				{% endif %}
 				onFinishing: function (event, currentIndex)
 				{
+					// Add ACE Editor Data to form to post
 					var formData = new FormData($('#osProfileForm')[0]);
+					for (i = 0; i < xeditors.length; i++) {
+						var fName = "req_cri_data_" + xeditors[i]['id']
+						formData.append(fName, xeditors[i]['instance'].getValue());
+					}
+
+					// Loop through values of the form data and exclude file type
+					// if the form value is empty, otherwise the formData does
+					// not get sent to the server.
+					var formDataNew = new FormData();
+					for (var pair of formData.entries()) {
+						if (pair[0] == 'profileFile') {
+							if( $('#profileFile').val() == '' ) {
+								continue;
+							}
+						}
+						formDataNew.append(pair[0], pair[1]);
+					}
+
 					$.ajax({
 						type:'POST',
 						url: '/osmanage/profile/save/{{profileID}}',
-						data: formData,
+						data: formDataNew,
 						cache: false,
 						processData: false,
 						contentType: false,
@@ -330,19 +433,19 @@
 				}
 
 				var id = $(this).attr("id");
+				if (typeof id != 'undefined') {
+					if (id.includes("reqPatchCriteria")) {
+						var res = id.replace("reqPatchCriteria", "");
+						var name = "#editor_" + res;
 
-				if ( id.includes("reqPatchCriteria") )
-				{
-					var res = id.replace("reqPatchCriteria", "");
-					var name = "#editor_"+res;
+						var e = document.getElementById(id);
+						var _val = e.options[e.selectedIndex].text;
 
-					var e = document.getElementById(id);
-					var _val = e.options[e.selectedIndex].text;
-
-					if (_val != "Script") {
-						css(name, 'height', '40px');
-					} else {
-						css(name, 'height', '240px');
+						if (_val != "Script") {
+							css(name, 'height', '40px');
+						} else {
+							css(name, 'height', '240px');
+						}
 					}
 				}
 			});
