Add missing state - Disabled

--- a/Server/apps/mpconsole/templates/patches/patches_custom.html
+++ b/Server/apps/mpconsole/templates/patches/patches_custom.html
@@ -103,6 +103,7 @@
 								{value: 'Production', text: 'Production'},
 								{value: 'QA', text: 'QA'},
 								{value: 'Create', text: 'Create'},
+								{value: 'Disabled', text: 'Disabled'},
 								{value: 'AutoPKG', text: 'AutoPKG'},
 							]
 						},
