Fix sort on patch group patches

--- a/Source/Server/apps/mpconsole/templates/patches/patch_group_patches.html
+++ b/Source/Server/apps/mpconsole/templates/patches/patch_group_patches.html
@@ -62,6 +62,8 @@
 			idField: 'id',
 			checkboxHeader: false,
 			maintainSelected: true,
+			sortName: 'postdate',
+			sortOrder: 'desc',
 			columns: [
 				{% for col in columns %}
 				{
