--- a/Source/Server/apps/mpconsole/templates/client_group.html
+++ b/Source/Server/apps/mpconsole/templates/client_group.html
@@ -23,7 +23,9 @@ Client Group - {{group_name}}
 		<li {% if selectedTab == 2 %}class="active"{% endif %}><a href="#settings" data-toggle="tab">Agent Settings</a></li>
 		<li {% if selectedTab == 3 %}class="active"{% endif %}><a href="#tasks" data-toggle="tab">Agent Tasks</a></li>
 		<li {% if selectedTab == 4 %}class="active"{% endif %}><a href="#profiles" data-toggle="tab">OS Profiles</a></li>
-		<li {% if selectedTab == 5 %}class="active"{% endif %}><a href="#users" data-toggle="tab">Users</a></li>
+        <li {% if selectedTab == 5 %}class="active"{% endif %}><a href="#reqSoftware" data-toggle="tab">Software</a></li>
+        <li {% if selectedTab == 6 %}class="active"{% endif %}><a href="#provisioning" data-toggle="tab">Provisioning</a></li>
+		<li {% if selectedTab == 7 %}class="active"{% endif %}><a href="#users" data-toggle="tab">Users</a></li>
 		{% endif %}
 	</ul>
 	<div class="tab-content">
@@ -191,7 +193,8 @@ Client Group - {{group_name}}
 			</form>
 		</div>
 		<div class="tab-pane fade {% if selectedTab == 3 %}in active{% endif %}" id="tasks">
-			<table id="tableTasks"></table>
+			<table id="tableTasks">
+			</table>
 		</div>
 		<div class="tab-pane fade {% if selectedTab == 4 %}in active{% endif %}" id="profiles">
 			<table id="tableProfiles" data-toolbar="#toolbarProfiles" data-show-export="true">
@@ -200,7 +203,29 @@ Client Group - {{group_name}}
 				</div>
 			</table>
 		</div>
-		<div class="tab-pane fade {% if selectedTab == 5 %}in active{% endif %}" id="users">
+		<div class="tab-pane fade {% if selectedTab == 5 %}in active{% endif %}" id="reqSoftware">
+			<table id="tableSoftware" data-toolbar="#toolbarSoftware" data-show-export="true">
+                <div id="toolbarSoftware">
+					<button id="addSWButton" type="button" class="btn btn-default"><i class="glyphicon glyphicon-plus"></i></button>
+                    <button id="delSWButton" type="button" class="btn btn-default"><i class="glyphicon glyphicon-trash"></i></button>
+				</div>
+			</table>
+            <br>
+            <div class="panel panel-info">
+                <div class="panel-heading">
+                    Required Software
+                </div>
+                <div class="panel-body">
+                    <p>The following software packages will be installed on client check-in. Software which requires a reboot will notify the user a reboot is nessasary via the standard macOS notification mechanisim.</p>
+                </div>
+
+            </div>
+		</div>
+        <div class="tab-pane fade {% if selectedTab == 6 %}in active{% endif %}" id="provisioning">
+			<table id="tableProvision" data-toolbar="#toolbarProvision" data-show-export="true">
+			</table>
+		</div>
+        <div class="tab-pane fade {% if selectedTab == 7 %}in active{% endif %}" id="users">
 			<table id="tableUsers" data-toolbar="#toolbarUsers" data-show-export="true">
 				<div id="toolbarUsers">
 					<button id="addButton" type="button" class="btn btn-default"><i class="glyphicon glyphicon-plus"></i></button>
@@ -224,6 +249,8 @@ Client Group - {{group_name}}
 -->
 	<script>
 	var $tasksTable = $('#tableTasks'), $ttRbutton = $('#ttRefreshbutton');
+	var $tableSoftware = $('#tableSoftware');
+	var $tableProvision = $('#tableProvision');
 
 	$( document ).ready(function()
 	{
@@ -343,6 +370,74 @@ Client Group - {{group_name}}
 					},
 				{% endfor %}
 			]
+		});
+
+		$tableSoftware.bootstrapTable(
+		{
+			striped: true,
+            url: "/clients/group/{{group_id}}/software",
+			pagination: true,
+			sidePagination: 'client',
+			pageList: ['10', '25', '50', '100', 'All'],
+			search: true,
+			showRefresh: true,
+			resizable: true,
+			sortable: true,
+			showColumns: true,
+			idField: 'rid',
+			uniqueId: 'rid',
+			columns: [
+            {
+                field: 'state',
+                checkbox: true,
+                rowspan: 1,
+                align: 'center',
+                valign: 'middle'
+			},
+			{% for swcol in swCols %}
+			{
+				field: '{{swcol[0]}}',
+				title: '{{swcol[1]}}',
+                {% if swcol[2] == '0' %}
+                visible: false,
+                {% endif %}
+				sortable: true
+			},
+			{% endfor %}
+			]
+		});
+
+		$tableProvision.bootstrapTable(
+		{
+			striped: true,
+            //url: "/clients/group/{{group_id}}/provision",
+			pagination: true,
+			sidePagination: 'client',
+			pageList: ['10', '25', '50', '100', 'All'],
+			search: true,
+			showRefresh: true,
+			resizable: true,
+			sortable: true,
+			showColumns: true,
+			idField: 'suuid',
+			uniqueId: 'suuid',
+			columns: [
+			{
+				field: 'operate',
+				title: '',
+				align: 'center',
+				events: operateEventsProvision,
+				formatter: operateFormatterProvision
+			},
+			{% for provcol in provCols %}
+			{
+				field: '{{provcol[0]}}',
+				title: '{{provcol[1]}}',
+				sortable: true
+			},
+			{% endfor %}
+			],
+            data: []
 		});
 
 		$('#tableUsers').bootstrapTable(
@@ -558,6 +653,44 @@ Client Group - {{group_name}}
 		return htmlData.join('');
 	}
 
+	/* Events for software table */
+	function operateFormatterSW(value, row, index)
+	{
+		var htmlData = [];
+		return htmlData.join('');
+	}
+
+	window.operateEventsSW =
+	{
+		'click .removeSW': function (e, value, row, index)
+		{
+			
+		},
+		'click .addSW': function (e, value, row, index)
+		{
+			
+		}
+	};
+
+	/* Events for provisioning table */
+	function operateFormatterProvision(value, row, index)
+	{
+		var htmlData = [];
+		return htmlData.join('');
+	}
+
+	window.operateEventsProvision =
+	{
+		'click .removeProv': function (e, value, row, index)
+		{
+			
+		},
+		'click .addProv': function (e, value, row, index)
+		{
+			
+		}
+	};
+
 	window.operateEventsUsers =
 	{
 		'click .remove': function (e, value, row, index)
@@ -627,6 +760,9 @@ Client Group - {{group_name}}
 	var $table = $('#tableUsers'), $addButton = $('#addButton'),
 	$_settingsSaveButton = $('#settingsSaveButton'), $_delClientButton = $('#delClientButton'),
 	$addProfileButton = $('#addProfileButton');
+
+	var $addSWButton = $('#addSWButton'), $delSWButton = $('#delSWButton');
+
 	var $_mvClientButton = $('#mvClientButton');
 	$(function () {
 		$addButton.click(function ()
@@ -684,7 +820,6 @@ Client Group - {{group_name}}
 			});
 
 		});
-
 
 		$_mvClientButton.click(function ()
 		{
@@ -750,6 +885,49 @@ Client Group - {{group_name}}
 				$('#modalDialog').modal('show');
 			});
 			*/
+		});
+
+		$addSWButton.click(function ()
+		{
+			$.get( "/clients/group/{{gResults['Group']['id']}}/sw/add").done(function(data)
+			{
+				$('#myContent').remove();
+				$('#modalTitle').html('Add Required Software to Group');
+				$('#modalBody').html(data);
+				$('#modalBody').css({'height':'200px'});
+				$('#modalSaveButton').remove();
+				$('#modalCancelButton').remove();
+				$('#modalDialog').modal('show');
+			});
+		});
+
+		$delSWButton.click(function ()
+		{
+			var rows = $tableSoftware.bootstrapTable('getAllSelections');
+			var rowsArr = [];
+			for (x in rows) {
+				var _rid = rows[x]['rid'];
+				rowsArr.push(_rid);
+			}
+
+			var _url = "/clients/group/{{gResults['Group']['id']}}/sw/remove";
+			$.ajax({
+				url: _url,
+				type: 'DELETE',
+				cache: false,
+				data: {'rids':rowsArr.toString()},
+				error: function (request, status, error)
+				{
+					jsonValue = jQuery.parseJSON( request.responseText );
+					alert(jsonValue.errormsg);
+				},
+				success: function () {
+					for (x in rowsArr) {
+						$tableSoftware.bootstrapTable('removeByUniqueId', rowsArr[x]);
+					}
+					alert("Software removed successfully.");
+				}
+			});
 		});
 	});
 
